0.9.21
Add sdtv and hd-dvd flags
Add caps fonts for Greek all-caps fix
Support for listitem helper in showcase view (others coming soon)

0.9.20
Fix animation bounce
Add icons for multiwidget layouts

0.9.19
Clean-up in-built game support

0.9.18
Fix clearlogo on home issues
Add tracknaming template option in skinsettings > library
Add use standard labels instead of titles in skinsettings > library
Change skinsetting strings to be more humanistic by adding verbs (use, apply, enable, choose, customise, display, etc.)
Update alphabet strip to skip to next/prev letter

0.9.17
Fix subtitles/audio/video settings dialog not hiding when offset slider is visible
Add add-ons to search dialog
Add global home fallback image

0.9.16
Fix for YouTube lists (and other addon lists) to only show when addon is installed
Update busy spinner in local library info search
Fix 1136 local library info search fanart jumpiness
Some other fixes for local library info search
Disable library info search for tvshows/episodes
Fix for showcase slide over with parentfolder items

0.9.15
Fix clearlogo to show in appropriate sections
Fix for widgetcontainer not clearing

0.9.14
Fix notification dialog
Fix minimal busy loader overlapping now playing when starting a movie
Fix minimal busy loader overlapping notifications and extendedprogressbar
Add press down from simple home submenu to open submenu hub

0.9.13
Fixes

0.9.12
Change overrides for custom node hubs to default items (to allow setting normal library paths)
Prevent pressing left if no submenu on vertical home.
Minimal busy loader option
Submenu on multi horizontal home
Fix for widgets retaining position onback

0.9.11
Add widget sort methods
Revert horizontal menu to Aura style spacing

0.9.10
Rewrite widget code for better handling

0.9.9
Fix for programs menu
Scrolling for horizontal menu (no limit on number of items)
Some tweaks to horizontal menu (still not perfect)

0.9.8
Fix for addonbrowser top menu

0.9.7
Square theme support

0.9.6