@@ -304,13 +304,7 @@
                         <onclick>Skin.ToggleSetting(DisableWatchedOverlay)</onclick>
                     </control>
 
-                    <control type="radiobutton" id="19403" description="Plot overlay">
-                        <visible>Integer.IsEqual(Window.Property(CurrentFocus),9004)</visible>
-                        <include>Defs_Settings_Button</include>
-                        <label>$LOCALIZE[31379]</label>
-                        <selected>Skin.HasSetting(AutoPlotOverlay)</selected>
-                        <onclick>Skin.ToggleSetting(AutoPlotOverlay)</onclick>
-                    </control>
+                    
 
                     <control type="radiobutton" id="19405" description="Flip sides">
                         <visible>Integer.IsEqual(Window.Property(CurrentFocus),9004)</visible>
@@ -367,6 +361,13 @@
                         <label>$LOCALIZE[31096]</label>
                         <selected>Skin.HasSetting(UseTrackNamingTemplate)</selected>
                         <onclick>Skin.ToggleSetting(UseTrackNamingTemplate)</onclick>
+                    </control>
+
+                    <control type="button" id="19410" description="Ratings">
+                        <visible>Integer.IsEqual(Window.Property(CurrentFocus),9004)</visible>
+                        <include>Defs_Settings_Button</include>
+                        <label>$LOCALIZE[31116]</label>
+                        <onclick>ActivateWindow(1118)</onclick>
                     </control>
 
                     <!-- ================= -->
@@ -576,7 +577,13 @@
                         <onclick>Skin.ToggleSetting(MinimalBusyLoader)</onclick>
                     </control>
 
-
+                    <control type="radiobutton" id="19707" description="Plot overlay">
+                        <visible>Integer.IsEqual(Window.Property(CurrentFocus),9007)</visible>
+                        <include>Defs_Settings_Button</include>
+                        <label>$LOCALIZE[31379]</label>
+                        <selected>Skin.HasSetting(AutoPlotOverlay)</selected>
+                        <onclick>Skin.ToggleSetting(AutoPlotOverlay)</onclick>
+                    </control>
                     <!-- ============ -->
                     <!-- Dependencies -->
                     <!-- ============ -->
