@@ -2,6 +2,8 @@
 Add sdtv and hd-dvd flags
 Add caps fonts for Greek all-caps fix
 Support for listitem helper in showcase view (others coming soon)
+Add filepath in filebrowser
+Add ratings selector
 
 0.9.20
 Fix animation bounce
